# infidelityservice

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/raw/: affair_data.csv
notebooks/: analysis_data.ipynb  select_model.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/data/: encode_data.py  make_dataset.py
