[tool.poetry]
name = "infidelityservice"
version = "0.1.0"
description = ""
authors = ["Nikita Anufriev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
